rename package and add psppath, and start adding audio and video playing again